--- a/style/main.css
+++ b/style/main.css
@@ -44,3 +44,99 @@
         color: #fff;
     }
 
+    /* footer */
+    footer {
+        max-width: 1250px;
+        margin: auto;
+        padding: 10px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr
+    }
+
+    .coloumn_three ul li {
+        list-style: none;
+        color: #8F8F8F;
+        font-family: Rubik;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 30px;
+        padding: 12px 0px;
+    }
+
+    .news_letter {
+        display: flex;
+        padding: 15px 0px;
+    }
+
+    .news_letter input {
+        width: 75%;
+        border-radius: 341px;
+        border: 2px solid #058B8C;
+        height: 48px;
+        padding-left: 15px;
+    }
+
+.news_letter button {
+    width: 23%;
+    margin-left: 1rem;
+    border-radius: 48px;
+    background: #058B8C;
+    box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.20), 3px 4px 10px 0px rgba(0, 0, 0, 0.20) inset;
+    color: #FFF;
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    /* 166.667% */
+    border: none;
+}
+
+.coloumn_two ul li {
+    list-style: none;
+    color: #8F8F8F;
+    font-family: Rubik;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    padding: 12px 40px;    
+}
+
+.coloumn_twoo ul li {
+    list-style: none;
+    color: #8F8F8F;
+    font-family: Rubik;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    padding: 12px 40px;
+}
+
+#Item_Home  {
+    color: #1E1E1E;
+    font-family: Rubik;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px; /* 150% */
+}
+
+.Into_Para{
+    color: #8F8F8F;
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+    width: 460px;
+    height: 92px;
+    flex-shrink: 0;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    }
