--- a/style/main.css
+++ b/style/main.css
@@ -5,77 +5,77 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
-    }
+}
 
-    header    {
-        max-width: 1250px;
-        margin: auto;
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+header {
+    max-width: 1250px;
+    margin: auto;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 
-    nav ul li {
-        display: inline-block;
-        padding: 0px 20px;
-        color: #C4C4C4;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-    }
+nav ul li {
+    display: inline-block;
+    padding: 0px 20px;
+    color: #C4C4C4;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 
-    nav ul li:hover {
-      color: rgba(5, 139, 140, 1);
-      cursor: pointer;
-    }
+nav ul li:hover {
+    color: rgba(5, 139, 140, 1);
+    cursor: pointer;
+}
 
-    .header_btn {
-        border-radius: 48px;
-        background: #058B8C;
-        box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.20), 3px 4px 10px 0px rgba(0, 0, 0, 0.20) inset;
-        padding: 10px 20px;
-        color: #fff;
-    }
-    
-    .header_btn:hover {
-        color: #fff;
-    }
+.header_btn {
+    border-radius: 48px;
+    background: #058B8C;
+    box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.20), 3px 4px 10px 0px rgba(0, 0, 0, 0.20) inset;
+    padding: 10px 20px;
+    color: #fff;
+}
 
-    /* footer */
-    footer {
-        max-width: 1250px;
-        margin: auto;
-        padding: 10px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr
-    }
+.header_btn:hover {
+    color: #fff;
+}
 
-    .coloumn_three ul li {
-        list-style: none;
-        color: #8F8F8F;
-        font-family: Rubik;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 30px;
-        padding: 12px 0px;
-    }
+/* footer */
+footer {
+    max-width: 1250px;
+    margin: auto;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr
+}
 
-    .news_letter {
-        display: flex;
-        padding: 15px 0px;
-    }
+.coloumn_three ul li {
+    list-style: none;
+    color: #8F8F8F;
+    font-family: Rubik;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    padding: 12px 0px;
+}
 
-    .news_letter input {
-        width: 75%;
-        border-radius: 341px;
-        border: 2px solid #058B8C;
-        height: 48px;
-        padding-left: 15px;
-    }
+.news_letter {
+    display: flex;
+    padding: 15px 0px;
+}
+
+.news_letter input {
+    width: 75%;
+    border-radius: 341px;
+    border: 2px solid #058B8C;
+    height: 48px;
+    padding-left: 15px;
+}
 
 .news_letter button {
     width: 23%;
@@ -101,7 +101,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    padding: 12px 40px;    
+    padding: 12px 40px;
 }
 
 .coloumn_twoo ul li {
@@ -115,22 +115,24 @@
     padding: 12px 40px;
 }
 
-#Item_Home  {
+#Item_Home {
     color: #1E1E1E;
     font-family: Rubik;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
-    line-height: 30px; /* 150% */
+    line-height: 30px;
+    /* 150% */
 }
 
-.Into_Para{
+.Into_Para {
     color: #8F8F8F;
     font-family: Rubik;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 30px; /* 166.667% */
+    line-height: 30px;
+    /* 166.667% */
     width: 460px;
     height: 92px;
     flex-shrink: 0;
@@ -139,4 +141,228 @@
 .column {
     float: left;
     width: 50%;
-    }
+}
+
+hr {
+    width: 1412px;
+    height: 2px;
+}
+
+.Copyright {
+    color: #8F8F8F;
+    font-family: Rubik;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 150% */
+    text-align: center;
+}
+
+/* Banner Section */
+.page_width {
+    max-width: 1250px;
+    margin: auto;
+    padding: 0px 10px;
+}
+
+.banner_section {
+    padding: 50px 0px;
+    background: url("../assets/images/home/banner/bg_banner.svg");
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: contain;
+}
+
+.banner_inner_section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.banner_inner_section .banner_img {
+    padding: 20px;
+}
+
+.banner_inner_section .banner_img img {
+    border-radius: 50%;
+}
+
+.banner_inner_section .banner_content {
+    margin-top: 130px;
+}
+
+.banner_inner_section .banner_content small {
+    border-radius: 30px;
+    background: #058B8C;
+    color: #FFF;
+    font-family: Rubik;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 0px;
+    padding: 5px 10px;
+}
+
+
+
+.banner_inner_section .banner_content .intro {
+    margin-top: 10px;
+    color: #1E1E1E;
+    font-family: Rubik;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -1.8px;
+}
+
+.banner_inner_section .banner_content h2 {
+    color: #1E1E1E;
+    font-family: Rubik;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -3.6px;
+}
+
+.banner_inner_section .banner_content h2 span {
+    color: #058B8C;
+}
+
+.banner_inner_section .banner_content .description {
+    color: #1E1E1E;
+    font-family: Rubik;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+    /* 166.667% */
+}
+
+.banner_button .btn_1 {
+    border-radius: 48px;
+    background: #8D0F11;
+    box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.20), 3px 4px 10px 0px rgba(0, 0, 0, 0.20) inset;
+    border: none;
+    color: #FFF;
+    text-align: center;
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    padding: 10px 20px;
+}
+
+.banner_button .btn_2 {
+    border-radius: 48px;
+    background: transparent;
+    /* box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.20), 3px 4px 10px 0px rgba(0, 0, 0, 0.20) inset; */
+    border: 2px solid #1E1E1E;
+    color: #1E1E1E;
+    text-align: center;
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    padding: 10px 20px;
+}
+
+/*Banner Who are we */
+.Banner_Who_are_we {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+
+
+.Banner_Who_are_we .Who_are_we_content h2 {
+    color: #1E1E1E;
+    font-family: Rubik;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 71px;
+    letter-spacing: -0.03em;
+    text-align: left;
+}
+
+.Banner_Who_are_we .Who_are_we_content span {
+    font-family: Rubik;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 71px;
+    letter-spacing: -0.03em;
+    text-align: left;
+    color: #058B8C;
+}
+
+.Banner_Who_are_we .Who_are_we_content .Our_Intro {
+    font-family: Rubik;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin: 10px 10px;
+    padding: 0px;
+
+    width: 692px;
+    height: 180px;
+    flex-shrink: 0;
+}
+
+.Banner_Who_are_we .Who_are_we_img img {
+    border-radius: 50%;
+}
+
+.Banner_Who_are_we .Who_are_we_img img {
+    padding: 20px;
+}
+
+.Company_Authority {
+    background-color: #058B8C;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding: 30px 30px;
+    margin: 20px 20px;
+}
+
+.Company_Authority h2 {
+    color: #FFF;
+    font-family: Rubik;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -1.8px;
+}
+
+.Company_Authority span {
+    color: #FFF;
+    font-family: Rubik;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -1.8px;
+}
+
+.Company_Authority .Company_Intro {
+    color: #FFF;
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 35px;
+    width: 692px;
+    height: 180px;
+    flex-shrink: 0;
+    margin: 20px 0px;
+}
